--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -393,15 +393,15 @@
     <integer name="config_bluetooth_tx_cur_ma">46</integer>
     <integer name="config_bluetooth_operating_voltage_mv">3500</integer>
 
-    <!-- doze always on -->
-    <bool name="config_enableDozeAlwaysOn">true</bool>
+    <!-- doze always on
+    <bool name="config_enableDozeAlwaysOn">true</bool>--> 
 
     <!-- Default value for proximity check on screen wake
          NOTE ! - Enable for devices that have a fast response
-         proximity sensor (ideally < 300ms) -->
+         proximity sensor (ideally < 300ms)
     <bool name="config_proximityCheckOnWake">true</bool>
-    <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>
+    <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>-->
     
-    <!-- Whether device supports double tap to wake -->
-    <bool name="config_supportDoubleTapWake">true</bool>    
+    <!-- Whether device supports double tap to wake
+    <bool name="config_supportDoubleTapWake">true</bool>-->     
 </resources>
